--- a/.github/workflows/check_cicd.yml
+++ b/.github/workflows/check_cicd.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: check_test
 
 # Controls when the workflow will run
 on:
@@ -28,7 +28,7 @@ jobs:
       # Runs a single command using the runners shell
       - name: Check My network Conection!
         run: |
-          ping www.google.com
+          ping  -c 10 www.google.com
           ip a 
           curl -I https://www.twitter.com
 
