--- a/.github/workflows/check_cicd.yml
+++ b/.github/workflows/check_cicd.yml
@@ -28,9 +28,9 @@ jobs:
       # Runs a single command using the runners shell
       - name: Check My network Conection!
         run: |
-          ping  -c 10 www.google.com
-          ip a 
-          curl -I https://www.twitter.com
+          ip a
+          curl -I https://www.twitter.com        
+       # ping  -c 10 www.google.comip a 
 
       # Runs a set of commands using the runners shell
       - name: Get my public ip address
