--- a/.github/workflows/check_cicd.yml
+++ b/.github/workflows/check_cicd.yml
@@ -41,7 +41,7 @@ jobs:
           curl https://ip.fengzhao.pro/
           # 使用 pnpm env 命令来安装 Nodejs
           sudo apt-get -y install virt-what 
-          virt-what
-          curl -fsSL https://get.docker.com | bash -s docker
-          docker info
+          sudo virt-what
+          sudo curl -fsSL https://get.docker.com | bash -s docker
+          sudo docker info
 
